<resources>
    <string name="app_name">Q Weather</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="share_app">Share App</string>
    <string name="world_wide">World Wide</string>
    <string name="qatar">Qatar</string>
    <string name="back">Back</string>
    <string name="current_location">Current Location</string>
    <string name="qatar_cities">Qatar - Cities</string>
    <string name="worldwide_cities">World - Wide Cities</string>
    <string name="select_location">Select Location</string>
    <string name="error_unknown">error unknown\n</string>
    <string name="select_city">Select City</string>

</resources>