<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/location_bottom_sheet_shape"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.side_nav_fragments.default_dashboard.city_bottom_sheet.CityBottomSheetFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/back"
        android:textColor="#8A1538"
        android:fontFamily="@font/poppins_medium"
        android:textSize="20sp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="30dp"


        />

    <androidx.cardview.widget.CardView
        android:id="@+id/type_button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="15dp"
        app:cardCornerRadius="15dp"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_button">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:padding="5dp"
            android:background="#8A1538"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/qatar_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp"
                app:cardBackgroundColor="@color/white"
                app:layout_constraintEnd_toStartOf="@+id/worldwide_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:id="@+id/qatar_button_layout"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="8dp"
                        android:fontFamily="@font/effra_trail_medium"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:text="@string/qatar"
                        android:id="@+id/qatar_label"
                        android:textColor="#7A7979"
                        android:textSize="18sp" />
                </androidx.constraintlayout.widget.ConstraintLayout>



            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:id="@+id/worldwide_button"
                android:layout_width="0dp"
                app:cardElevation="0dp"
                app:cardCornerRadius="10dp"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/qatar_button"
                app:layout_constraintTop_toTopOf="parent">
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/worldwide_button_layout"
                    >
                    <TextView
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="8dp"
                        android:fontFamily="@font/effra_trail_medium"
                        android:text="@string/world_wide"
                        android:id="@+id/world_label"
                        android:textColor="#7A7979"
                        android:textSize="18sp" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:id="@+id/current_location_layout"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintTop_toBottomOf="@+id/type_button_layout"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/city_marker"
            android:id="@+id/city_marker"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_location"
            android:id="@+id/current_location_label"
            android:textSize="18sp"
            android:fontFamily="@font/effra_trail_medium"
            android:textColor="@color/black"
            app:layout_constraintStart_toEndOf="@+id/city_marker"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:layout_width="0dp"
            android:id="@+id/tv_location"
            android:layout_height="wrap_content"
            android:fontFamily="@font/effra_trail_medium"
            app:layout_constraintStart_toEndOf="@+id/city_marker"
            app:layout_constraintTop_toBottomOf="@+id/current_location_label"
            tools:text = "Kannur, Kerala"
            android:textColor="#7A7979"
            android:textSize="15sp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardElevation="0dp"
        app:cardCornerRadius="5dp"
        app:layout_constraintTop_toBottomOf="@+id/current_location_layout"
        android:id="@+id/city_search_bar">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="25dp"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/notice_frames"
            android:id="@+id/city_search_bar_layout"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/search_icon"
                android:src="@drawable/outline_search_24"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/city_search_bar_edit_text"
                android:hint="Add City"
                android:background="@null"
                android:textColorHint="@color/black"
                app:layout_constraintStart_toEndOf="@+id/search_icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/black"
                android:paddingTop="3dp"
                android:fontFamily="@font/effra_trail_medium"
                android:layout_marginStart="20dp"
                android:textSize="18sp"/>



        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>
    <TextView
        android:layout_width="0dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="#123456"
        android:textSize="30sp"
        android:padding="18dp"
        android:fontFamily="@font/effra_trail_medium"
        android:background="#F1F1F1"
        android:id="@+id/location_type"
        app:layout_constraintTop_toBottomOf="@+id/city_search_bar"
        android:layout_height="wrap_content"
        android:text="@string/qatar_cities"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location_type"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:id="@+id/locations_recycler_view"
        />
   <ProgressBar
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintBottom_toBottomOf="parent"
       android:id="@+id/progress_bar"/>




</androidx.constraintlayout.widget.ConstraintLayout>